--- a/Projeto/home.html
+++ b/Projeto/home.html
@@ -12,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -44,13 +44,13 @@
                     </a>
                 </li>
 
-                <li class="list">
+                <li class="list usuario">
                     <a href="./usuario.html">
                         <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                         <span class="title">Usuário</span>
                     </a>
                 </li>
-                <li class="list">
+                <li class="list planejamento">
                     <a href="index.html">
 
                         <span class="icon"><ion-icon name="calendar-outline"></ion-icon></span>
@@ -68,7 +68,7 @@
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-        <script src="./menu.js"></script>
+        <script src="./js/menu.js"></script>
 
         <div class="home" id="home">
 
@@ -78,19 +78,19 @@
     <p></p>
     <p></p>
     <p></p>
+
     <h1>BEM VINDO AO ORGANIZADOR.ME</h1>
     <h2>Organize aqui a sua semana</h2>
     <br>
-    <ul>
+    <ul class="inicio">
         <li>Clique em "Usuário" e forneça suas informações pessoais</li>
     </ul>
-    <ul>
-        <li>Clique em "Planejamento" e planeja a sua semana</li>
+    <ul class="inicio">
+        <li>Clique em "Planejamento" e planeje a sua semana</li>
     </ul>
-    <ul>
+    <ul class="inicio">
         <li>Clique em "Sair" para sair da sua página</li>
     </ul>
-
 </body>
 
 </html>
