--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de tarefas</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -45,13 +42,13 @@
                     </a>
                 </li>
 
-                <li class="list">
+                <li class="list usuario">
                     <a href="./usuario.html">
                         <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                         <span class="title">Usuário</span>
                     </a>
                 </li>
-                <li class="list">
+                <li class="list planejamento">
                     <a href="index.html">
 
                         <span class="icon"><ion-icon name="calendar-outline"></ion-icon></span>
@@ -69,6 +66,8 @@
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
+        <!--<script src="./menu.js"></script>-->
+
         <div class="home" id="home">
 
         </div>
@@ -76,13 +75,6 @@
 
 
     <div id="main">
-
-        <br>
-        <br>
-        <br>
-        <br>
-
-
         <div class="diasSemana">
             <div class="semana">
                 <p><b>Segunda-feira</b></p>
@@ -222,7 +214,7 @@
         </form>
     </div>
     <div id="janelaEdicaoFundo"></div>
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
