--- a/Projeto/usuario.html
+++ b/Projeto/usuario.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./usuario.css">
+    <link rel="stylesheet" href="./css/usuario.css">
 </head>
 
 <body>
@@ -41,13 +41,13 @@
                     </a>
                 </li>
 
-                <li class="list">
+                <li class="list usuario">
                     <a href="./usuario.html">
                         <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                         <span class="title">Usuário</span>
                     </a>
                 </li>
-                <li class="list">
+                <li class="list planejamento">
                     <a href="index.html">
 
                         <span class="icon"><ion-icon name="calendar-outline"></ion-icon></span>
@@ -65,7 +65,7 @@
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-        <script src="./menu.js"></script>
+        <script src="./js/menu.js"></script>
 
         <div class="home" id="home">
 
@@ -73,10 +73,14 @@
     </div>
 
     <div id="main">
-        <div class="container rounded bg-white mt-5 mb-5">
+        <div class="container rounded mb-5">
+            <!--mt-5-->
             <div class="row">
                 <div class="col-md-3 border-right">
-                    <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                    <div class="d-flex flex-column align-items-center text-center p-4 py-5">
+                        <div class="d-flex justify-content-center align-intems-center mb-3">
+                            <h4> Perfil </h4>
+                        </div>
                         <img class="rounded-circle mt-5" width="150px" src="https://br.web.img3.acsta.net/pictures/22/09/14/15/29/4822518.png" />
                         <span class="font-weight-bold">Jacob Turner</span>
                         <span class="text-black-50">
@@ -142,7 +146,7 @@
                             </div>
                         </div>
                         <div class="mt-5 text-center">
-                            <button class="btn btn-primary profile-button" type="button"> Salvar </button>
+                            <button class="btn profile-button" type="button"> Salvar </button>
                         </div>
                     </div>
                 </div>
@@ -170,7 +174,7 @@
             </div>
         </div>
     </div>
-    </div>
+
 </body>
 
 </html>
