--- a/Projeto/usuario.html
+++ b/Projeto/usuario.html
@@ -65,8 +65,6 @@
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-        <script src="./js/menu.js"></script>
-
         <div class="home" id="home">
 
         </div>
@@ -174,7 +172,7 @@
             </div>
         </div>
     </div>
-
+    <script src="./js/usuario.js"></script>
 </body>
 
 </html>
